Revert "Websockets sessions and pdo part1"
This reverts commit 429800c5931a624ab6a3e5c4ff943185f8e7691a.

--- a/popdata/header.html
+++ b/popdata/header.html
@@ -33,7 +33,7 @@
 
 	<div class='logbox hidden'>
 		<h2>LOGIN AND PLAY</h2>
-		<form name='input' action='../sql_user_login.php' method='post'>
+		<form name='input' action='../sql_user_login.php' method='get'>
 		
 			<label class='loginlabel' for='username'>Username: </label>
 			<input class='logininput' name='username' type='text' autofocus required>
